# glpictl-ai

./: .gga  .gitignore  AGENTS.md  LICENSE  README.md  go.mod  go.sum  install.ps1  install.sh  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: go-ci.yml  release.yml
cmd/glpictl-ai/: config.go  configure.go  global_search.go  install.go  main.go  main_test.go  setup-mcp.go  update.go  version.go
glpictl_ai/: __init__.py
internal/config/: config.go  config_priority_test.go  config_test.go  errors.go  errors_test.go
internal/glpi/: client.go  client_put_delete_test.go  client_test.go  errors.go  errors_test.go
internal/tools/: bulk_create.go  bulk_update.go  cost_summary.go  cost_summary_test.go  create.go  create_test.go  dashboard.go  delete.go  delete_test.go  expiration_tracker.go  expiration_tracker_test.go  export.go  get.go  get_test.go  global_search.go  group_assets.go  group_assets_test.go  license_compliance.go  license_compliance_test.go  list_fields.go  list_fields_test.go  network_topology.go  network_topology_test.go  ping.go  ping_test.go  rack_capacity.go  rack_capacity_test.go  register.go  search.go  search_test.go  summary.go  update.go  update_by_name.go  update_test.go  user_assets.go  validate.go  validate_test.go  warranty_report.go  warranty_report_test.go
sdd/installer-no-sudo/: archive-report.md  proposal.md  spec.md  tasks.md  verify-report.md
sdd/installer-v1/: design  proposal  spec  tasks
skills/glpi-admin/: SKILL.md
skills/glpi-financial/: SKILL.md
skills/glpi-infrastructure/: SKILL.md
(+8 files in other folders)
