[project]
name = "glpictl-ai"
version = "0.1.0"
description = "GLPI inventory management CLI for AI agents and humans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Giuliano Testa" }]
keywords = ["glpi", "inventory", "cli", "ai", "itam", "cmdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
glpictl-ai = "glpictl_ai.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glpictl_ai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
